files/knative-embedded-ingressroute-gateway.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  annotations:
    kubernetes.io/ingress.class: contour-external
  name: sockeye
  namespace: vmware-functions
spec:
  routes:
  - conditions:
    - prefix: /events
    pathRewritePolicy:
      replacePrefix:
      - replacement: /
    services:
    - name: sockeye
      port: 80
  - conditions:
    - prefix: /static
    pathRewritePolicy:
      replacePrefix:
      - replacement: /static
    services:
    - name: sockeye
      port: 80
  - conditions:
    - prefix: /ws
    enableWebsockets: true
    services:
    - name: sockeye
      port: 80
